...
          editable={!disabled}
          onFocus={() => setIsFocused(true)}
          onBlur={() => setIsFocused(false)}
          onSubmitEditing={handleSend}
          blurOnSubmit={false}
          returnKeyType="send"
          testID="message-input"
        />
      </XStack>

      {/* Send Button */}
      <YStack
        width={44}
...
